--- a/BasicDemo/src/main/resources/com/example/basicdemo/hello-view.fxml
+++ b/BasicDemo/src/main/resources/com/example/basicdemo/hello-view.fxml
@@ -2,15 +2,24 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.text.Text?>
+
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.basicdemo.HelloController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
 
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
+  <HBox spacing="10.0" alignment="CENTER">
+    <Button text="Button 1" onAction="#onButton1Click"/>
+    <Button text="Button 2" onAction="#onButton2Click"/>
+    <Button text="Button 3" onAction="#onButton3Click"/>
+  </HBox>
+  <Label fx:id="welcomeText" text="Initial Text"/>
+
+  <Text fx:id="textField" text="This is placeholder...."/>
+  <Label text="You can click each button and new text will appear below."/>
 </VBox>
